--- a/InitialOpeningAesthetics.css
+++ b/InitialOpeningAesthetics.css
@@ -11,6 +11,22 @@ p {
   font-family: verdana;
   font-size: 20px;
 }
+.center1 {
+  margin: 0;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.center2 {
+  margin: 0;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 .button {
   background-color: rgb(177,197,150); /* Beige */
   border: none;
@@ -18,16 +34,21 @@ p {
   padding: 30px 45px;
   text-align: center;
   text-decoration: none;
-  display: flex-block;
-  font-family: verdana;
+  display: block;
+  margin-bottom: 12px; 
   font-size: 20px;
 }
-.button1 {border-radius: 12px;}
+.button1 {
+    border-radius: 12px;
+    font-family: verdana;}
 .button1:hover {
   background-color: rgb(117,131,99);
   color: white;
 }
-.button2 {border-radius: 12px;}
+.button2 {
+    border-radius: 12px;
+    font-family: verdana;
+}
 .button2:hover {
   background-color: rgb(117,131,99);
   color: white;
