--- a/MoodButtonsV1.css
+++ b/MoodButtonsV1.css
@@ -33,7 +33,7 @@ body {
     background-color: rgb(177,197,150); /* Beige */
     border: none;
     color: white;
-    padding: 30px 45px;
+    padding: 30px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -43,14 +43,14 @@ body {
   }
   
   .button1 {
-      border-radius: 12px;
+      border-radius: 50%;
       font-family: verdana;}
   .button1:hover {
     background-color: rgb(117,131,99);
     color: white;
   }
   .button2 {
-      border-radius: 12px;
+      border-radius: 50%;
       font-family: verdana;
   }
   .button2:hover {
